typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfAndAndOperator.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            374,
        ),
        hi: BytePos(
            375,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfAndAndOperator.ts:8:50
  |
8 |     return typeof x === "string" && ((x = 10) && x); // string | number
  |                                                  ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            555,
        ),
        hi: BytePos(
            556,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfAndAndOperator.ts:12:55
   |
12 |     return typeof x === "string" && ((x = "hello") && x); // string | number
   |                                                       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            758,
        ),
        hi: BytePos(
            759,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfAndAndOperator.ts:17:12
   |
17 |         && x;   // boolean
   |            ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1093,
        ),
        hi: BytePos(
            1094,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfAndAndOperator.ts:24:12
   |
24 |         && x));   // boolean
   |            ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1379,
        ),
        hi: BytePos(
            1380,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfAndAndOperator.ts:30:11
   |
30 |         ? x // boolean
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1749,
        ),
        hi: BytePos(
            1750,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfAndAndOperator.ts:41:24
   |
41 |         ? ((x = 10) && x.toString()) // x is number
   |                        ^

